--- a/src/sass/modules/modal/modal.scss
+++ b/src/sass/modules/modal/modal.scss
@@ -1,6 +1,18 @@
+@keyframes openModal {
+  from {
+    transform: translateY(-25%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .prevent-scrolling { overflow: hidden; }
 
-.dash-overlay {
+.dash-overlay,
+.modal-overlay {
   background-color: rgba($black, 0.80);
   overflow-x: hidden;
   overflow-y: auto;
@@ -16,7 +28,8 @@
   }
 }
 
-.dash-modal {
+.dash-modal,
+.modal {
   background-color: $white;
   border-radius: 15px;
   margin: 1.5rem auto;
@@ -26,6 +39,8 @@
   z-index: 1050;
   cursor: default;
   overflow: hidden;
+
+  animation: openModal 0.3s ease-out;
 
   @media #{$tablet} {
     margin: 5rem auto 5rem auto;
