--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -12,6 +12,13 @@
 	}
 }
 
+@mixin grid-column_desktop($span) {
+	@media #{$desktop} {
+		grid-column: span $span;
+		@supports(display: grid) { width: auto; }
+	}
+}
+
 %fallback-gap {
 	margin: $grid-gutter 0;
 	&:first-of-type, &:last-of-type { margin-top:    0; }
