Adjust desktop fallbacks

--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -4,6 +4,12 @@
 	}
 }
 
+@mixin fallback-grid_desktop($percent) {
+	@media #{$desktop} {
+		width: calc(#{$percent} - #{$grid-gutter}); float: left;//SAFARI 9
+	}
+}
+
 @mixin grid-column($span) {
 	grid-column: 1 / -1;
 	@media #{$tablet} {
