Add CSS Grid desktop sizing classes (#68)

--- a/src/sass/modules/css-grid/css-grid-mixins.scss
+++ b/src/sass/modules/css-grid/css-grid-mixins.scss
@@ -4,9 +4,22 @@
 	}
 }
 
+@mixin fallback-grid_desktop($percent) {
+	@media #{$desktop} {
+		width: calc(#{$percent} - #{$grid-gutter}); float: left;//SAFARI 9
+	}
+}
+
 @mixin grid-column($span) {
 	grid-column: 1 / -1;
 	@media #{$tablet} {
+		grid-column: span $span;
+		@supports(display: grid) { width: auto; }
+	}
+}
+
+@mixin grid-column_desktop($span) {
+	@media #{$desktop} {
 		grid-column: span $span;
 		@supports(display: grid) { width: auto; }
 	}
