Move experimental file import

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -1,6 +1,6 @@
 $global-content-width: 800px !default;
 
-@import '../experimental/x-paragon.scss';
+@import '../paragon.scss';
 @import 'color';
 @import 'typography';
 @import 'image';
