--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -77,6 +77,10 @@ a {
     text-decoration: underline;
     text-decoration-color: inherit;
   }
+  
+  &.button {
+    text-decoration: none;
+  }
 }
 
 p, li.text-list_item {
