Add overpanel animation to component

--- a/src/sass/modules/overpanel/overpanel.scss
+++ b/src/sass/modules/overpanel/overpanel.scss
@@ -1,4 +1,20 @@
+@keyframes slideUp {
+  0% {
+    transform: translateY(100vh);
+  }
+  100% {
+    transform: none;
+  }
+}
 .overpanel {
+  position: fixed;
+  overflow-y: auto;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 3;
+  background-color: $gray-100;
 
   .title-bar {
     background-color: $white;
@@ -19,6 +35,11 @@
   .content {
     max-width: $content-s;
     margin-top: 0;
+  }
+
+  &.slide-up {
+    animation: slideUp 0.3s ease-in-out;
+    animation-fill-mode: both;
   }
 
   /* Utility classes for max-width of Overpanel */
