--- a/src/sass/modules/accordion/_accordion.scss
+++ b/src/sass/modules/accordion/_accordion.scss
@@ -22,8 +22,16 @@
       &:before { color: $black; }
     }
 
-    .title { margin-left: $space-xs; }
-    .secondary-title { margin-left: auto; }
+    .title,
+    .secondary-title {
+      @media #{$phone} { font-size: $font-size-normal; }
+    }
+
+    .title { margin: 0 $space-xs; }
+    .secondary-title {
+      margin-left: auto;
+      white-space: nowrap;
+    }
 
     &:hover {
       background-color: $gray-50;
