Add inline-block to a tags with button class

--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -77,9 +77,10 @@ a {
     text-decoration: underline;
     text-decoration-color: inherit;
   }
-  
+
   &.button {
     text-decoration: none;
+    display: inline-block;
   }
 }
 
