--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -117,7 +117,7 @@ $sidebar-background: #354052;
   @extend .button--transparent;
   @extend .button--icon;
   @extend .button--white;
-  @media #{$tablet} { display: none; }
+  @media #{$tablet} { display: none !important; }
 }
 
 .mobile-profile{
