--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -135,7 +135,7 @@
 
 //Set the margin of Cards when they are within a Grid
 .grid {
-  :not(.checkbox-card):not(.radio-card):not(.card-content) > .card {
+  :not(.checkbox-card):not(.radio-card):not(.card-content) > .card:not(.card--dashed) {
     @media #{$phone} {
       margin: 0 -#{$grid-gutter} $grid-gutter -#{$grid-gutter};
       border-radius: 0;
@@ -160,6 +160,7 @@
       background-color: $gray-100;
       border-radius: 3px;
       height: 1.25rem;
+      overflow: hidden;
 
       &::after {
         display: block;
