--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -87,7 +87,7 @@
     padding: 0;
     list-style: none;
      li {
-      padding: 0.75rem;
+      padding: $space-s $space-m;
       transition: $global-transition;
     }
      &.is-selectable {
@@ -95,6 +95,10 @@
         cursor: pointer;
         &:hover {
           background-color: $gray-100;
+        }
+        a {
+          margin: -#{$space-s} -#{$space-m};
+          padding: $space-s $space-m;
         }
       }
     }
