--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -211,6 +211,13 @@ fieldset {
       .dashing-icon { @extend .dashing-icon--orange; }
     }
   }
+  //Remove top margin on radio button errors
+  .radio--custom,
+  .checkbox--custom {
+    &~ .message {
+      margin-top: 0;
+    }
+  }
 }
 
 //flex form
