Card List plus React link (#82)

--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -86,16 +86,26 @@
     margin: 0;
     padding: 0;
     list-style: none;
-     li {
-      padding: 0.75rem;
+    li {
+      padding: $space-s $space-m;
       transition: $global-transition;
     }
-     &.is-selectable {
+    &.is-selectable {
       li {
         cursor: pointer;
         &:hover {
           background-color: $gray-100;
         }
+        a {
+          margin: -#{$space-s} -#{$space-m};
+          padding: $space-s $space-m;
+        }
+      }
+    }
+    &.has-border {
+      li {
+        border-bottom: 1px solid $gray-100;
+        &:last-of-type { border: 0; }
       }
     }
   }
