Add card-info examples

--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -132,3 +132,7 @@ $sides: (
   align-items: center;
   justify-content: space-between;
 }
+.flex--align-center {
+  display: flex;
+  align-items: center;
+}
