--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -6,7 +6,7 @@ $content-width: $global-content-width;
 
 $header-height: 4rem;
 $sub-nav-height: 3rem;
-$nav-separator-width: 2px;
+$global-banner-height: 4rem;
 
 //Theme
 $header-color: $color-white !default;
@@ -205,13 +205,21 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
   }
 }
 
-/* Mobile Navigation Icon
+/* Global Banner Adjustment
   =========================================================================== */
-// .button--mobile-sidebar {
-//   @extend %icon-purple;
-//   @extend .button;
-//   @extend .button--transparent;
-//   @extend .button--icon;
-//   @extend .button--purple;
-//   @media #{$tablet} { display: none; }
-// }
+.global-banner {
+  + .header {
+    top: $global-banner-height;
+    &::after { top: $global-banner-height; }
+
+    + .sub-nav {
+      top: calc(#{$global-banner-height} + #{$header-height});
+      &::after {
+        top: calc(#{$global-banner-height} + #{$header-height});
+      }
+      ~.content {
+        margin-top: calc(#{$global-banner-height} + #{$header-height} + #{$sub-nav-height});
+      }
+    }
+  }
+}
