Update example page for banners

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -959,3 +959,10 @@ footer {
 
   &.color-gradient { background-image: $color-gradient; color: $color-white; }
 }
+
+.global-banner--example {
+  position: relative;
+  &::after {
+    position: absolute;
+  }
+}
