--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -208,7 +208,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
 
 /* Global Banner Adjustment
   =========================================================================== */
-.global-banner {
+.global-banner-container {
   + .header {
     top: $global-banner-height_phone;
     &::after { top: $global-banner-height_phone; }
