--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -629,7 +629,7 @@ footer {
     position: relative;
 
     &::after {
-      z-index: -1;
+      z-index: $zindex-negative;
       content: "";
       width: calc(100% - 5rem);
       height: 100%;
