--- a/src/sass/experimental/mobilemenu.scss
+++ b/src/sass/experimental/mobilemenu.scss
@@ -85,7 +85,7 @@ $sidebar-background: #354052;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 4;
+  z-index: $zindex-mobilemenu;
   width: 100%;
 
   *{
