--- a/src/sass/modules/icons/icons.scss
+++ b/src/sass/modules/icons/icons.scss
@@ -51,7 +51,7 @@
   &.dashing-icon--white:before  { color: $white; }
   &.dashing-icon--black:before  { color: $black; }
   &.dashing-icon--blue:before   { color: $blue-600; }
-  &.dashing-icon--gray:before, 
+  &.dashing-icon--gray:before,
   &.dashing-icon--grey:before   { color: $gray; }
   &.dashing-icon--green:before  { color: $green; }
   &.dashing-icon--orange:before { color: $orange; }
@@ -88,7 +88,7 @@
   &.dashing-icon--info-stroke:before      { content: '\e810'; } /* '' */
   &.dashing-icon--location:before         { content: '\e811'; } /* '' */
   &.dashing-icon--locked:before           { content: '\e812'; } /* '' */
-  &.dashing-icon--minus:before, 
+  &.dashing-icon--minus:before,
   &.dashing-icon--zoom-out:before         { content: '\e814'; } /* '' */
   &.dashing-icon--new-tab:before          { content: '\e815'; } /* '' */
   &.dashing-icon--notification:before     { content: '\e816'; } /* '' */
@@ -96,8 +96,8 @@
   &.dashing-icon--pencil:before           { content: '\e818'; } /* '' */
   &.dashing-icon--phone:before            { content: '\e819'; } /* '' */
   &.dashing-icon--play:before             { content: '\e81b'; } /* '' */
-  &.dashing-icon--plus:before,  
-  &.dashing-icon--add:before, 
+  &.dashing-icon--plus:before,
+  &.dashing-icon--add:before,
   &.dashing-icon--zoom-in:before          { content: '\e81c'; } /* '' */
   &.dashing-icon--pull:before             { content: '\e81d'; } /* '' */
   &.dashing-icon--push:before             { content: '\e81e'; } /* '' */
@@ -127,7 +127,7 @@
   &.dashing-icon--alert-stroke:before     { content: '\e837'; } /* '' */
   &.dashing-icon--alert-filled:before     { content: '\e838'; } /* '' */
   &.dashing-icon--add-person:before       { content: '\e839'; } /* '' */
-  
+
   //Below Added on Jan 15, 2018
   &.dashing-icon--inbox:before            { content: '\e83d'; } /* '' */
   &.dashing-icon--face-amazing:before     { content: '\e83e'; } /* '' */
@@ -150,4 +150,8 @@
 
   //Added Feb 16, 2018
   &.dashing-icon--pause:before            { content: '\e846'; } /* '' */
+}
+
+.flex.has-icon {
+  .dashing-icon { margin-right: $space-xs; }
 }
