--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -127,23 +127,29 @@ $sides: (
 .text-color--yellow { color: $yellow; }
 
 //Flex utilities
-.flex { display: flex }
+.space-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-.flex-column  { flex-direction: column }
-.flex-wrap    { flex-wrap: wrap }
+.flex { display: flex; }
 
-.flex-center   { align-items: center }
-.flex-baseline { align-items: baseline }
-.flex-stretch  { align-items: stretch }
-.flex-start    { align-items: flex-start }
-.flex-end      { align-items: flex-end }
+.flex-column  { flex-direction: column; }
+.flex-wrap    { flex-wrap: wrap; }
 
-.flex-justify  { justify-content: space-between }
+.flex-center   { align-items: center; }
+.flex-baseline { align-items: baseline; }
+.flex-stretch  { align-items: stretch; }
+.flex-start    { align-items: flex-start; }
+.flex-end      { align-items: flex-end; }
+
+.flex-justify  { justify-content: space-between; }
 
 .flex-auto {
   flex: 1 1 auto;
   min-width: 0;
   min-height: 0;
 }
-.flex-grow { flex: 1 0 auto }
-.flex-none { flex: none }
+.flex-grow { flex: 1 0 auto; }
+.flex-none { flex: none; }
