--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -664,61 +664,61 @@ footer {
   }
   .tag { min-width: 3rem; text-align: center; }
 }
-
-.x-button--blueWhite  {@include button($background-color: $blue, $color: $white); }
-.x-button--whiteBlue  {@include button($background-color: $white, $color: $blue); }
-.x-button--blueBlack  {@include button($background-color: $blue, $color: $black); }
-.x-button--blackBlue  {@include button($background-color: $black, $color: $blue); }
-
-.x-button--greenWhite  {@include button($background-color: $green, $color: $white); }
-.x-button--whiteGreen  {@include button($background-color: $white, $color: $green); }
-.x-button--greenBlack  {@include button($background-color: $green, $color: $black); }
-.x-button--blackGreen  {@include button($background-color: $black, $color: $green); }
-
-.x-button--redWhite  {@include button($background-color: $red, $color: $white); }
-.x-button--whiteRed  {@include button($background-color: $white, $color: $red); }
-.x-button--redBlack  {@include button($background-color: $red, $color: $black); }
-.x-button--blackRed  {@include button($background-color: $black, $color: $red); }
-
-.x-button--orangeWhite  {@include button($background-color: $orange, $color: $white); }
-.x-button--whiteOrange  {@include button($background-color: $white, $color: $orange); }
-.x-button--orangeBlack  {@include button($background-color: $orange, $color: $black); }
-.x-button--blackOrange  {@include button($background-color: $black, $color: $orange); }
-
-.x-button--purpleWhite  {@include button($background-color: $purple, $color: $white); }
-.x-button--whitePurple  {@include button($background-color: $white, $color: $purple); }
-.x-button--purpleBlack  {@include button($background-color: $purple, $color: $black); }
-.x-button--blackPurple  {@include button($background-color: $black, $color: $purple); }
-
-.x-button--grayWhite  {@include button($background-color: $gray-200, $color: $white); }
-.x-button--whiteGray  {@include button($background-color: $white, $color: $gray-200); }
-.x-button--grayBlack  {@include button($background-color: $gray-200, $color: $black); }
-.x-button--blackGray  {@include button($background-color: $black, $color: $gray-200); }
-
-.x-button--brand-redWhite  {@include button($background-color: #E96A63, $color: $white); }
-.x-button--brand-whiteRed  {@include button($background-color: $white, $color: #E96A63); }
-.x-button--brand-redBlack  {@include button($background-color: #E96A63, $color: $black); }
-.x-button--brand-blackRed  {@include button($background-color: $black, $color: #E96A63); }
-
-.x-button--brand-purpleWhite  {@include button($background-color: #72569B, $color: $white); }
-.x-button--brand-whitePurple  {@include button($background-color: $white, $color: #72569B); }
-.x-button--brand-purpleBlack  {@include button($background-color: #72569B, $color: $black); }
-.x-button--brand-blackPurple  {@include button($background-color: $black, $color: #72569B); }
-
-.x-button--brand-blueWhite  {@include button($background-color: #28336D, $color: $white); }
-.x-button--brand-whiteBlue  {@include button($background-color: $white, $color: #28336D); }
-.x-button--brand-blueBlack  {@include button($background-color: #28336D, $color: $black); }
-.x-button--brand-blackBlue  {@include button($background-color: $black, $color: #28336D); }
-
-.x-button--brand-yellowWhite  {@include button($background-color: #F5CD66, $color: $white); }
-.x-button--brand-whiteYellow  {@include button($background-color: $white, $color: #F5CD66); }
-.x-button--brand-yellowBlack  {@include button($background-color: #F5CD66, $color: $black); }
-.x-button--brand-blackYellow  {@include button($background-color: $black, $color: #F5CD66); }
-
-.x-button--brand-grayWhite  {@include button($background-color: #F1F2F2, $color: $white); }
-.x-button--brand-whiteGray  {@include button($background-color: $white, $color: #F1F2F2); }
-.x-button--brand-grayBlack  {@include button($background-color: #F1F2F2, $color: $black); }
-.x-button--brand-blackGray  {@include button($background-color: $black, $color: #F1F2F2); }
+// 
+// .x-button--blueWhite  {@include button($background-color: $blue, $color: $white); }
+// .x-button--whiteBlue  {@include button($background-color: $white, $color: $blue); }
+// .x-button--blueBlack  {@include button($background-color: $blue, $color: $black); }
+// .x-button--blackBlue  {@include button($background-color: $black, $color: $blue); }
+//
+// .x-button--greenWhite  {@include button($background-color: $green, $color: $white); }
+// .x-button--whiteGreen  {@include button($background-color: $white, $color: $green); }
+// .x-button--greenBlack  {@include button($background-color: $green, $color: $black); }
+// .x-button--blackGreen  {@include button($background-color: $black, $color: $green); }
+//
+// .x-button--redWhite  {@include button($background-color: $red, $color: $white); }
+// .x-button--whiteRed  {@include button($background-color: $white, $color: $red); }
+// .x-button--redBlack  {@include button($background-color: $red, $color: $black); }
+// .x-button--blackRed  {@include button($background-color: $black, $color: $red); }
+//
+// .x-button--orangeWhite  {@include button($background-color: $orange, $color: $white); }
+// .x-button--whiteOrange  {@include button($background-color: $white, $color: $orange); }
+// .x-button--orangeBlack  {@include button($background-color: $orange, $color: $black); }
+// .x-button--blackOrange  {@include button($background-color: $black, $color: $orange); }
+//
+// .x-button--purpleWhite  {@include button($background-color: $purple, $color: $white); }
+// .x-button--whitePurple  {@include button($background-color: $white, $color: $purple); }
+// .x-button--purpleBlack  {@include button($background-color: $purple, $color: $black); }
+// .x-button--blackPurple  {@include button($background-color: $black, $color: $purple); }
+//
+// .x-button--grayWhite  {@include button($background-color: $gray-200, $color: $white); }
+// .x-button--whiteGray  {@include button($background-color: $white, $color: $gray-200); }
+// .x-button--grayBlack  {@include button($background-color: $gray-200, $color: $black); }
+// .x-button--blackGray  {@include button($background-color: $black, $color: $gray-200); }
+//
+// .x-button--brand-redWhite  {@include button($background-color: #E96A63, $color: $white); }
+// .x-button--brand-whiteRed  {@include button($background-color: $white, $color: #E96A63); }
+// .x-button--brand-redBlack  {@include button($background-color: #E96A63, $color: $black); }
+// .x-button--brand-blackRed  {@include button($background-color: $black, $color: #E96A63); }
+//
+// .x-button--brand-purpleWhite  {@include button($background-color: #72569B, $color: $white); }
+// .x-button--brand-whitePurple  {@include button($background-color: $white, $color: #72569B); }
+// .x-button--brand-purpleBlack  {@include button($background-color: #72569B, $color: $black); }
+// .x-button--brand-blackPurple  {@include button($background-color: $black, $color: #72569B); }
+//
+// .x-button--brand-blueWhite  {@include button($background-color: #28336D, $color: $white); }
+// .x-button--brand-whiteBlue  {@include button($background-color: $white, $color: #28336D); }
+// .x-button--brand-blueBlack  {@include button($background-color: #28336D, $color: $black); }
+// .x-button--brand-blackBlue  {@include button($background-color: $black, $color: #28336D); }
+//
+// .x-button--brand-yellowWhite  {@include button($background-color: #F5CD66, $color: $white); }
+// .x-button--brand-whiteYellow  {@include button($background-color: $white, $color: #F5CD66); }
+// .x-button--brand-yellowBlack  {@include button($background-color: #F5CD66, $color: $black); }
+// .x-button--brand-blackYellow  {@include button($background-color: $black, $color: #F5CD66); }
+//
+// .x-button--brand-grayWhite  {@include button($background-color: #F1F2F2, $color: $white); }
+// .x-button--brand-whiteGray  {@include button($background-color: $white, $color: #F1F2F2); }
+// .x-button--brand-grayBlack  {@include button($background-color: #F1F2F2, $color: $black); }
+// .x-button--brand-blackGray  {@include button($background-color: $black, $color: #F1F2F2); }
 
 .x-accessiblity-table {
   span, p, h2, .x-accessibility--white, .x-accessibility--black {
