--- a/src/sass/modules/actions/_actions.scss
+++ b/src/sass/modules/actions/_actions.scss
@@ -29,7 +29,7 @@ $action--focus: $blue-300 !default;
 #{$buttons} {
   @extend %action;
   @extend %button--smooth;
-  @include button($background-color: $blue, $color: $white);
+  @include button(var(--btn-primary-bg), var(--btn-primary-hover), var(--btn-primary-text));
 
   -webkit-font-smoothing: auto;
   font-weight: $font-weight-normal;
@@ -79,20 +79,19 @@ $action--focus: $blue-300 !default;
   }
 
   //Button Color Options
-  &.button--primary { @include button($background-color: $blue, $color: $white); }
+  &.button--primary { @include button(var(--btn-primary-bg), var(--btn-primary-hover), var(--btn-primary-text)); }
   &.button--gray,
   &.button--grey,
   &.button--secondary {
-    @include button($background-color: $gray-200, $color: $gray-900);
-    .dashing-icon:before { color: $gray-700 !important; }
+    @include button(var(--color-accent), var(--color-accent-dark), var(--color-white));
   }
-  &.button--blue {@include button($background-color: $blue, $color: $white); }
-  &.button--green { @include button($background-color: $green, $color: $white); }
-  &.button--orange { @include button($background-color: $orange, $color: $black); }
-  &.button--purple { @include button($background-color: $purple, $color: $white); }
-  &.button--red { @include button($background-color: $red, $color: $white); }
-  &.button--white { @include button($background-color: $white, $color: $gray-800); }
-  &.button--black { @include button($background-color: $black, $color: $white); }
+  &.button--blue   { @include button(var(--color-blue), var(--color-blue-dark), var(--color-white)); }
+  // &.button--green  { @include button($background-color: $green, $color: $white); }
+  // &.button--orange { @include button($background-color: $orange, $color: $black); }
+  // &.button--purple { @include button($background-color: $purple, $color: $white); }
+  // &.button--red    { @include button($background-color: $red, $color: $white); }
+  // &.button--white  { @include button($background-color: $white, $color: $gray-800); }
+  // &.button--black  { @include button($background-color: $black, $color: $white); }
 
   //Used to display actions and icons with a transparent background
   //transparentize(white, 1) used instead of transparent because "darken" requires an rgb color value
@@ -134,10 +133,10 @@ $action--focus: $blue-300 !default;
     &.button--orange { @include border--button($orange); }
     &.button--purple { @include border--button($purple); }
     &.button--gray,
-    &.button--secondary {
-      @include button($background-color: transparentize(white, 1), $color: $gray-700); border-color: $gray-500;
-      &:hover, &:focus { @include button($background-color: $gray-200, $color: $gray-900); border-color: transparentize(white, 1);}
-    }
+    // &.button--secondary {
+    //   @include button($background-color: transparentize(white, 1), $color: $gray-700); border-color: $gray-500;
+    //   &:hover, &:focus { @include button($background-color: $gray-200, $color: $gray-900); border-color: transparentize(white, 1);}
+    // }
     &.button--white {
       @include border--button($white);
       &:hover, &:focus {
