--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -5,6 +5,7 @@
 /* Imported base components
   ================================================== */
 @import "colors/colors";
+@import "colors/given-colors";
 @import "mixins/mixins";
 @import "variables/variables";
 @import "utilities/utilities";
